--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "babel-loader": "^9.1.0",
     "css-loader": "^6.0.0",
     "electron": "21.3.0",
+    "electron-devtools-installer": "^3.2.0",
+    "electron-react-devtools": "^0.5.3",
     "node-loader": "^2.0.0",
     "style-loader": "^3.0.0"
   },
