--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "test_electron_app",
-  "productName": "test_electron_app",
+  "name": "DSReportBeaver",
+  "productName": "DSReportBeaver",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "A simple reporting app.",
   "main": ".webpack/main",
   "scripts": {
     "start": "electron-forge start",
